--- a/CyberTeam/src/app/home/home.component.html
+++ b/CyberTeam/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <main>
         <!---------------Qui Nous sommes --------------->
 
-    <section id="entreprise" class="my-5">
+    <section id="entreprise" class="my-5 py-5">
       <div class="container">
           <div class="row gy-4 align-items-center">
               <div class="col-12 col-md-6">
@@ -51,7 +51,7 @@
             <div class="col-8">
                 <h2 class="mt-4">Testez vos connaissances en cybersécurité</h2>
                 <h5 class="mt-4">Que savez-vous de la cybersécurité ? Testez vos connaissances avec un quiz rapide sur les principes de base de la sécurité en ligne.</h5>
-                <button type="button" class="btn btn-primary mt-4">Passez le quiz de cybersécurité</button>
+                <a href="./form" class="btn btn-primary mt-4">Passez le quiz de cybersécurité</a>
             </div>
             <div class="col-2"></div>
           </div>
@@ -98,5 +98,6 @@
               </div>
           </div>
       </div>
+      
     </section>
 
