--- a/CyberTeam/src/app/home/home.component.html
+++ b/CyberTeam/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 
-  <main>
-        <!---------------Qui Nous sommes --------------->
 
     <section id="entreprise" class="my-5">
       <div class="container">
@@ -51,7 +49,7 @@
             <div class="col-8">
                 <h2 class="mt-4">Testez vos connaissances en cybersécurité</h2>
                 <h5 class="mt-4">Que savez-vous de la cybersécurité ? Testez vos connaissances avec un quiz rapide sur les principes de base de la sécurité en ligne.</h5>
-                <button type="button" class="btn btn-primary mt-4">Passez le quiz de cybersécurité</button>
+                <a type="button" class="btn btn-primary mt-4" href="./form">Passez le quiz de cybersécurité</a>
             </div>
             <div class="col-2"></div>
           </div>
@@ -71,7 +69,6 @@
                   <img src="../assets/contact.jpg" alt="Contact" width="100%">
               </div>
               <div class="col-12 offset-md-1 col-md-6">
-
                   <!-- Formulaire -->
                   <form class="row">
                       <div class="col-6 my-2">
@@ -94,7 +91,6 @@
                           <button type="submit" class="btn btn-primary w-100">Envoyer</button>
                       </div>
                   </form>
-
               </div>
           </div>
       </div>
