--- a/CyberTeam/src/app/app.component.html
+++ b/CyberTeam/src/app/app.component.html
@@ -1,76 +1,60 @@
-<html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CybertTeam</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
-
-    <!-- boxIcon -->
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-</head>
 
-<body>
-
-  <!---------------Header--------------->
-  <header class="py-4">
-      <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-          <div class="container">
-              <a class="navbar-brand text-uppercase fw-bold" href="#">
-                <img src="../assets/logo.png">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                  <ul class="navbar-nav">
-                      <li class="nav-item">
-                          <a class="nav-link" href="#entreprise">Entreprise</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#action">Nos domaine</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#questionnaire">Questionnaire</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#contact">Contact</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </nav>
-  </header>
-
-
-  <router-outlet></router-outlet>
-
-      
-  <footer class="border-top">
-      <div class="container py-3">
-          <div class="row gy-4 align-items-center">
-              <div class="col-12 col-md-4">
+<div class="app">
+    <header class="py-4">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+            <div class="container">
                 <a class="navbar-brand text-uppercase fw-bold" href="#">
                   <img src="../assets/logo.png">
                 </a>
-              </div>
-              <div class="col-12 col-md-4 text-md-center">
-                  <ul class="list-unstyled mb-0">
-                      <li>
-                          <a href="#" class="text-decoration-none text-dark">Mentions légales</a>
-                      </li>
-                  </ul>
-              </div> 
-          </div>
-      </div>
-  </footer>
-
-
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#entreprise">Entreprise</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#action">Nos domaine</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#questionnaire">Questionnaire</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
   
-  </body>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  
+    <footer class="border-top">
+        <div class="container py-3">
+            <div class="row gy-4 align-items-center">
+                <div class="col-12 col-md-4">
+                  <a class="navbar-brand text-uppercase fw-bold" href="#">
+                    <img src="../assets/logo.png">
+                  </a>
+                </div>
+                <div class="col-12 col-md-4 text-md-center">
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#" class="text-decoration-none text-dark">Mentions légales</a>
+                        </li>
+                    </ul>
+                </div> 
+            </div>
+        </div>
+    </footer>
+  
+  </div>
